--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -40,7 +40,7 @@ We have all been in a situation during a project where we tell ourselves: "I wis
 
 This first part of the workflow will span over three chapters: 
 
-+ UX Matters (\@ref(#matters)), a chapter where we introduce to the concepts of User Experience, and why it is a crucial concept when you are building your application. 
++ UX Matters (\@ref(matters)), a chapter where we introduce to the concepts of User Experience, and why it is a crucial concept when you are building your application. 
 This chapter will cover the importance of simplicity when creating web applications, the danger of trying to implement too much components (aka "feature creep"), and finally we will introduce some general rules about Web Accessibility. 
 These topics are vast topics, and a lot of literature and online resources exists for all these subjects: further readings and resources are linked inside each section. 
 
@@ -67,16 +67,16 @@ On the other hand, you (or someone from your team), will be working on building 
 For this point, you can use what we call a "Rmd-first" approach, by combining R functions with the writing of Vignettes that describes the internal of the application. 
 This part of the workflow will be developed in two chapters: 
 
-+ The _Setting up for success with `{golem}`_ chapter (#\@ref(#settingupsuccess)) will cover the basics of getting started with the `{golem}` package so that you can start your prototyped application with solid foundation. 
++ The _Setting up for success with `{golem}`_ chapter (\@ref(settingupsuccess)) will cover the basics of getting started with the `{golem}` package so that you can start your prototyped application with solid foundation. 
 
-+ The _Building an “ipsum-app”_ chapter (#\@ref(#stepprotopype)) will cover the importance of prototyping when it comes to building applications, then present `{shinipsum}` and `{fakir}`, and finally will introduce how you can use the "Rmd First" methodology to prototype your application back-end.
++ The _Building an “ipsum-app”_ chapter (\@ref(stepprotopype)) will cover the importance of prototyping when it comes to building applications, then present `{shinipsum}` and `{fakir}`, and finally will introduce how you can use the "Rmd First" methodology to prototype your application back-end.
 
 ## Step 3: Build 
 
 The _Build_ part is the one where you will combine the business (or back-end) logic with the front-end. 
 In this third part, you will work on the core engine of the application, making the business logic work inside the interactive logic of your application. 
 
-This step of the workflow is cover in _Building app with `{golem}`_ (#\@ref(#stepbuild)), a chapter that presents the various functions you can use to build your application, _i.e_ the one you will be using to combine your back-end and front-end.
+This step of the workflow is cover in _Building app with `{golem}`_ (\@ref(stepbuild)), a chapter that presents the various functions you can use to build your application, _i.e_ the one you will be using to combine your back-end and front-end.
 
 In this step, we will cover: 
 
@@ -88,7 +88,7 @@ In this step, we will cover:
 
 ## Step 4: Strengthen 
 
-_Strengthening_ your app is ensuring your application is immortal, in the sense that we defined in chapter (#\@ref(#successfulshinyapp)) of this book.
+_Strengthening_ your app is ensuring your application is immortal, in the sense that we defined in chapter (\@ref(successfulshinyapp)) of this book.
 
 In this part, we will go through unit tests, reproducible development environment, version control and continuous integration in the context of `{shiny}` applications.
 Building a solid testing suite is crucial to the success of a project, as it allows a project to be stable on the long run, be it when you will want to add new feature, or refactor existing code: 
@@ -98,11 +98,11 @@ Building a solid testing suite is crucial to the success of a project, as it all
 
 This step of the workflow will span over two chapters. 
 
-+ The first one, _Build yourself a safety net_ (chapter \@ref(#step-secure)), details how to build a testing environment for your `{shiny}` Application, be it for testing the back-end or the front-end. 
++ The first one, _Build yourself a safety net_ (chapter \@ref(step-secure)), details how to build a testing environment for your `{shiny}` Application, be it for testing the back-end or the front-end. 
 In this chapter, you will be introduced to `{testthat}` for testing your application back-end, tools that are more linked to testing the front-end like NodeJS `puppeteer` module, `{shinytest}` and `{crrry}` for testing interactive logic, `{shinyloadtest}` and `{dockerstats}` for testing your application load. 
 This chapter will also cover `{renv}` and `Docker`, two essential tools for developing in a reproducible environment. 
 
-+ In the _Version Control_ chapter  (#\@ref(#version-control)), you will be introduced to `git` and to automated test using Continuous Integration platforms like Travis CI or GitHub Actions. 
++ In the _Version Control_ chapter  (\@ref(version-control)), you will be introduced to `git` and to automated test using Continuous Integration platforms like Travis CI or GitHub Actions. 
 
 ## Step 5: Deploy 
 
