--- a/08-step-by-step-prototype.Rmd
+++ b/08-step-by-step-prototype.Rmd
@@ -1,20 +1,20 @@
-# (PART) Step 2: Prototype {-}
+# (PART) Step 2: Prototype {.unnumbered}
 
 # Setting up for success with `{golem}` {#settingupsuccess}
 
-Before starting to prototype and build anything, initialize a `{golem}` [@R-golem] project! 
+Before starting to prototype and build anything, initialize a `{golem}` [@R-golem] project!
 This will help you start your application on solid ground, and once the project is ready to be filled, you can start prototyping right inside it.
 
-The general workflow for "prototype and build" is the following: the project manager sets up a `{golem}` project, where the first steps are filled, the general structure (potentially with `{shiny}` module) is set, and then the project is registered to the version control system. 
-Once we have this structure, package and modules combined, we can start prototyping the UI inside the module, work on the CSS and JavaScript elements that might be needed, and prototyping the back-end functionalities inside Rmarkdown files. 
+The general workflow for "prototype and build" is the following: the project manager sets up a `{golem}` project, where the first steps are filled, the general structure (potentially with `{shiny}` module) is set, and then the project is registered to the version control system.
+Once we have this structure, package and modules combined, we can start prototyping the UI inside the module, work on the CSS and JavaScript elements that might be needed, and prototyping the back-end functionalities inside Rmarkdown files.
 And then, once this two prototyping sides are finished, we work on the integration of everything inside the reactive context.
 
 In this chapter and in chapter 11, we will be presenting the `{golem}` package in more depth.
-`{golem}` is a framework that standardizes the process of building production-ready `{shiny}` Applications. 
+`{golem}` is a framework that standardizes the process of building production-ready `{shiny}` Applications.
 
 ## Create a `{golem}`
 
-Once `{golem}` is installed and available on your computer, you can got to File > New Project... in RStudio, and choose "Package for `{shiny}` App Using golem" input. 
+Once `{golem}` is installed and available on your computer, you can got to File \> New Project... in RStudio, and choose "Package for `{shiny}` App Using golem" input.
 
 If you want to do it through command line, you can use:
 
@@ -23,7 +23,7 @@ If you want to do it through command line, you can use:
 golem::create_golem(path = "path/to/package")
 ```
 
-Once you have got that, a new project will be launched. 
+Once you have got that, a new project will be launched.
 Here is the structure of this project:
 
 ```{r 08-step-by-step-prototype-2, include=FALSE}
@@ -56,19 +56,18 @@ try({
 
 ```
 
-
 ```{r 08-step-by-step-prototype-3, comment=""}
 # This is what a default {golem} project looks like
 fs::dir_tree("golex")
 ```
 
-If you already have some experience with R packages, most of these files will appear very familiar to you. 
-That's because a `{golem}` app IS a package, so it uses the standard R pakage structure (and yes, the good news is that everything you know about R packages will work in a `{golem}` based application). 
+If you already have some experience with R packages, most of these files will appear very familiar to you.
+That's because a `{golem}` app IS a package, so it uses the standard R pakage structure (and yes, the good news is that everything you know about R packages will work in a `{golem}` based application).
 
 ## Setting things up with `dev/01_start.R`
 
-Once you have created your project, the first file that opens is `dev/01_start.R`. 
-This file contains a series of commands to run once, at the start of the project. 
+Once you have created your project, the first file that opens is `dev/01_start.R`.
+This file contains a series of commands to run once, at the start of the project.
 
 ### Fill the DESCRIPTION and set options
 
@@ -93,12 +92,12 @@ golem::fill_desc(
 )   
 ```
 
-Then, call the `golem::set_golem_options()` function, which will add information to the `golem-config.yml` file, and set the `{here}` [@R-here] package root sentinel. 
-`{here}` is an R package designed to handle directory management in R. 
-When used in combination with `{golem}`, `{here}` helps ensuring that everything you do in your console is performed relatively to the root directory of your project: the one containing the `DESCRIPTION` of your application. 
-That way, even if you change the working directory of your R session to a subfolder, you will still be able to create modules and CSS files in the correct folder. 
+Then, call the `golem::set_golem_options()` function, which will add information to the `golem-config.yml` file, and set the `{here}` [@R-here] package root sentinel.
+`{here}` is an R package designed to handle directory management in R.
+When used in combination with `{golem}`, `{here}` helps ensuring that everything you do in your console is performed relatively to the root directory of your project: the one containing the `DESCRIPTION` of your application.
+That way, even if you change the working directory of your R session to a subfolder, you will still be able to create modules and CSS files in the correct folder.
 
-### Set common Files 
+### Set common Files
 
 If you want to use the MIT license, add README, a code of conduct, a lifecycle badge, and NEWS.
 
@@ -119,10 +118,9 @@ It's also where you will be invited to use `git`:
 usethis::use_git()
 ```
 
-
 ### Use Recommended Elements
 
-`golem::use_recommended_tests()` and `golem::use_recommended_deps()` sets a default testing infrastructure and adds dependencies to the application. 
+`golem::use_recommended_tests()` and `golem::use_recommended_deps()` sets a default testing infrastructure and adds dependencies to the application.
 
 ### Add utilitary functions
 
@@ -137,11 +135,11 @@ golem::use_utils_ui()
 golem::use_utils_server()
 ```
 
-In this file, you will for example find `list_to_li()`, which is a function to turn an R list into an HTML list or `with_red_star()`, a function to add a small red star after  an UI input, useful for communicating that an input is mandatory.
+In this file, you will for example find `list_to_li()`, which is a function to turn an R list into an HTML list or `with_red_star()`, a function to add a small red star after an UI input, useful for communicating that an input is mandatory.
 
 ### Changing the favicon
 
-Favicons are the small icon located on the tab of your browser: in the default application, this favicon is the `{golem}` hex.  
+Favicons are the small icon located on the tab of your browser: in the default application, this favicon is the `{golem}` hex.
 
 If you want to change the default favicon:
 
@@ -149,14 +147,14 @@ If you want to change the default favicon:
 golem::use_favicon( path = "path/to/favicon")
 ```
 
-You're now set! 
+You're now set!
 You've successfully initiated the project and can go to `dev/02_dev.R`.
 
-## Setting infrastructure for prototyping 
+## Setting infrastructure for prototyping
 
 ### Add modules in `dev/02_dev.R`
 
-The `golem::add_module()` functions creates a module in the `R` folder. 
+The `golem::add_module()` functions creates a module in the `R` folder.
 The file and the modules will be named after the `name` parameter, by adding `mod_` to the R file, and `mod_*_ui` and `mod_*_server` to the UI and server functions.
 
 ```{r 08-step-by-step-prototype-9, eval = FALSE}
@@ -175,19 +173,18 @@ readLines("golex/R/mod_my_first_module.R") %>%
   cat(sep = "\n")
 ```
 
-Note that in order not to make errors when putting these into your app, the end of the file will contain code that has to be copied and pasted inside your UI and server functions. 
+Note that in order not to make errors when putting these into your app, the end of the file will contain code that has to be copied and pasted inside your UI and server functions.
 
-This is where you will be adding the core of your app. 
+This is where you will be adding the core of your app.
 In a first time, these modules will contain prototyped UI for the application, and once the application is ready to be integrated, you will add the core logic here.
 
 ### Add CSS & JS Files
 
-Adding some infrastructure for JavaScript and CSS file from the very beginning can also formalize the set-up: you are giving the rest of your team a specific file where they can write the JavaScript and CSS code. 
+Adding some infrastructure for JavaScript and CSS file from the very beginning can also formalize the set-up: you are giving the rest of your team a specific file where they can write the JavaScript and CSS code.
 
 ```{r 08-step-by-step-prototype-12, eval = FALSE}
 golem::add_js_file( "script" )
 ```
-
 
 ```{r 08-step-by-step-prototype-13, include = FALSE}
 golem::add_js_file("script", here::here("golex"), open = FALSE)
@@ -229,4 +226,4 @@ golem::add_css_file("custom", here::here("golex"), open = FALSE)
 
 will create a blank CSS file inside the `inst/app/www` folder.
 
-Note that if you are building your application with `{golem}`, these files will be linked automatically to your application. 
+Note that as you are building your application with `{golem}`, these files will be linked automatically to your application.
