--- a/index.Rmd
+++ b/index.Rmd
@@ -187,7 +187,7 @@ Whatever the challenge, he remains reliable, constructive and efficient when it 
 ## Want to help? {-}
 
 Any feedback on the book is very welcome. 
-Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues) if you spot a typo, or if you have any idea for enhancing some parts of this book.
+Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a Pull Request if you spot a typo.
 
 ## Other resources {-}
 
@@ -249,7 +249,8 @@ means that the package will be installed from GitHub, and that you can use the `
 We want to thank ThinkR for freeing us time to write this book, and for always being supportive all along the project. 
 
 Colin wants to personally thank [Christophe Dervieux](https://twitter.com/chrisderv) for all his help, be it for this book or any other project, and for being such an awesome person. 
-He also want to thank [Eric Nantz](https://r-podcast.org/) for taking the time to write the forewords, for being one of the first `{golem}` adopter, and for always being enthusiastic about all thing gravitating around the `golemverse`.
+He also want to thank [Eric Nantz](https://r-podcast.org/) for taking the time to write the forewords, for being one of the first `{golem}` adopter, and for always being enthusiastic about all thing gravitating around the `golemverse`. 
+A big thanks also to [David Granjon](https://divadnojnarg.github.io/) for his precious feedback on this book. 
 
 ### Contributors to this book {-}
 
